--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@
 #counters{
     float: left;
     font-size: 18px;
+    margin-left: 50px;
     
 }
 
@@ -30,7 +31,7 @@
     padding: 5px;
     font-size: 16px;
     border-radius: 12px;
-    float: left;
+    float: right;
     margin-left: 100px;
     background: black;
     color: white;
